--- a/P2_Poznan-Couchsurfing-Game/p2-poznan-couchsurfing-game/tsconfig.json
+++ b/P2_Poznan-Couchsurfing-Game/p2-poznan-couchsurfing-game/tsconfig.json
@@ -9,6 +9,8 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
